@@ -34,9 +34,9 @@ import org.thymeleaf.standard.expression.IStandardExpression;
 import org.thymeleaf.standard.expression.NoOpToken;
 import org.thymeleaf.templatemode.TemplateMode;
 import org.thymeleaf.util.ArrayUtils;
+import org.thymeleaf.util.EscapedAttributeUtils;
 import org.thymeleaf.util.EvaluationUtils;
 import org.thymeleaf.util.StringUtils;
-import org.unbescape.html.HtmlEscape;
 
 /**
  *
@@ -120,7 +120,8 @@ public abstract class AbstractStandardMultipleAttributeModifierTagProcessor exte
             } else {
                 // Attribute is a "normal" attribute, not a fixed-value conditional one - or we are not just replacing
 
-                final String newAttributeValue = HtmlEscape.escapeHtml4Xml(rightValue == null ? null : rightValue.toString());
+                final String newAttributeValue =
+                        EscapedAttributeUtils.escapeAttribute(getTemplateMode(), rightValue == null ? null : rightValue.toString());
                 if (newAttributeValue == null || newAttributeValue.length() == 0) {
 
                     if (this.modificationType == ModificationType.SUBSTITUTION) {
